# webapp

./: LICENSE  pyproject.toml
core/: settings.py  urls.py
core/templates/: base.html
places/: admin.py  models.py  urls.py
places/migrations/: 0001_initial.py  0002_auto_20200403_0303.py  0002_review.py
places/templates/places/: place_detail.html  place_list.html
reviews/: models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/templates/reviews/: review_detail.html  review_form.html  review_list.html
