[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Spencer Summerville <me@grenuttag.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
psycopg2 = "^2.8.4"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
